--- a/my-wakeword.yaml
+++ b/my-wakeword.yaml
@@ -1510,7 +1510,7 @@ media_player:
       - id: timer_finished_sound
         file: https://github.com/esphome/home-assistant-voice-pe/raw/dev/sounds/timer_finished.flac
       - id: wake_word_triggered_sound
-        file: http://192.168.1.21:9999/Peasant_Female70.wav
+        file: http://192.168.1.21:9999/euer_gnaden.mp3
       - id: easter_egg_tick_sound
         file: https://github.com/esphome/home-assistant-voice-pe/raw/dev/sounds/easter_egg_tick.mp3
       - id: easter_egg_tada_sound
@@ -1554,6 +1554,7 @@ micro_wake_word:
       id: hey_jarvis
     - model: hey_mycroft
       id: hey_mycroft
+    - model: https://raw.githubusercontent.com/Im-a-Train/wakewords/refs/heads/main/hey_hene.json
     - model: https://github.com/kahrendt/microWakeWord/releases/download/stop/stop.json
       id: stop
       internal: true
