--- a/my-wakeword.yaml
+++ b/my-wakeword.yaml
@@ -1555,6 +1555,7 @@ micro_wake_word:
     - model: hey_mycroft
       id: hey_mycroft
     - model: https://raw.githubusercontent.com/Im-a-Train/wakewords/refs/heads/main/hey_hene.json
+      id: hey_hene
     - model: https://github.com/kahrendt/microWakeWord/releases/download/stop/stop.json
       id: stop
       internal: true
