--- a/my-wakeword.yaml
+++ b/my-wakeword.yaml
@@ -1554,8 +1554,8 @@ micro_wake_word:
       id: hey_jarvis
     - model: hey_mycroft
       id: hey_mycroft
-    - model: https://raw.githubusercontent.com/Im-a-Train/wakewords/refs/heads/main/hey_hene.json
-      id: hey_hene
+    #- model: https://raw.githubusercontent.com/Im-a-Train/wakewords/refs/heads/main/hey_hene.json
+    #  id: hey_hene
     - model: https://github.com/kahrendt/microWakeWord/releases/download/stop/stop.json
       id: stop
       internal: true
