--- a/my-wakeword.yaml
+++ b/my-wakeword.yaml
@@ -1548,7 +1548,8 @@ micro_wake_word:
     gain_factor: 4
   stop_after_detection: false
   models:
-    - model: https://github.com/kahrendt/microWakeWord/releases/download/okay_nabu_20241226.3/okay_nabu.json
+    #- model: https://github.com/kahrendt/microWakeWord/releases/download/okay_nabu_20241226.3/okay_nabu.json
+    - model: https://raw.githubusercontent.com/Im-a-Train/wakewords/refs/heads/main/hey_hene.json
       id: okay_nabu
     - model: hey_jarvis
       id: hey_jarvis
