--- a/my-wakeword.yaml
+++ b/my-wakeword.yaml
@@ -1548,15 +1548,14 @@ micro_wake_word:
     gain_factor: 4
   stop_after_detection: false
   models:
-    #- model: https://github.com/kahrendt/microWakeWord/releases/download/okay_nabu_20241226.3/okay_nabu.json
-    - model: https://raw.githubusercontent.com/Im-a-Train/wakewords/refs/heads/main/hey_hene.json
+    - model: https://github.com/kahrendt/microWakeWord/releases/download/okay_nabu_20241226.3/okay_nabu.json
       id: okay_nabu
     - model: hey_jarvis
       id: hey_jarvis
     - model: hey_mycroft
       id: hey_mycroft
-    #- model: https://raw.githubusercontent.com/Im-a-Train/wakewords/refs/heads/main/hey_hene.json
-    #  id: hey_hene
+    - model: https://raw.githubusercontent.com/Im-a-Train/wakewords/refs/heads/main/hey_hene.json
+      id: hey_hene
     - model: https://github.com/kahrendt/microWakeWord/releases/download/stop/stop.json
       id: stop
       internal: true
